# foundation

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  dependencies.cmake  include_files.cmake  use_ext_foundation.cmake
cmake/: FindCryptopp.cmake  FindFilesystem.cmake  define_ext_foundation_macros.cmake  ext_add_ext_modules.cmake  ext_colored_output.cmake  ext_colorize_output.cmake  ext_declare_dependencies.cmake  ext_file.cmake  ext_generate_version_hpp.cmake  ext_install.cmake  ext_logging.cmake  ext_project_defaults.cmake  ext_script_git_version.cmake  ext_targets.cmake  ext_text.cmake  ext_use_ext_project_defaults.cmake  ext_version.cmake  ext_warnings.cmake  script_generate_version_hpp.cmake  use_ext_macros.cmake
include/ext/: config.hpp
include/ext/macros/: advanced.hpp  assert.hpp  compiler.hpp  general.hpp  platform.hpp
